--- a/src/Sample/mainwindow.ui
+++ b/src/Sample/mainwindow.ui
@@ -85,7 +85,7 @@
   <customwidget>
    <class>QLive2dWidget</class>
    <extends>QOpenGLWidget</extends>
-   <header>./QtLive2dWidget/src/QLive2dWidget.hpp</header>
+   <header>QLive2dWidget.hpp</header>
   </customwidget>
  </customwidgets>
  <resources/>
